--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#application.yml
+#twilio:
+ #account_sid: 
+ #auth_token: 
+ #trial_number:
+ 
 
+twilio.account.sid=ACd3ceef4874535e3c7a616a2632f692f4
+twilio.auth.token=bb43ec7b85c0852fc0c96a1dadee1c21
+twilio.number=+19704007055
+#response.url=
+#response.message=
