--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-validation</artifactId>
 	</dependency>
+	<dependency>
+    <groupId>com.sparkjava</groupId>
+    <artifactId>spark-core</artifactId>
+    <version>2.9.3</version>
+	</dependency>
 	</dependencies>
 
 	<build>
