--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@
  #trial_number:
  
 
-twilio.account.sid=ACd3ceef4874535e3c7a616a2632f692f4
-twilio.auth.token=bb43ec7b85c0852fc0c96a1dadee1c21
-twilio.number=+19704007055
+twilio.account.sid=xxx
+twilio.auth.token=xx
+twilio.number=xx
 #response.url=
 #response.message=
